# STERO

./: .gitignore  README.md  pyproject.toml
LAB4_SPRAWOZDANIE/: LAB4.md
SPRAWOZDANIA/LAB1_SPRAWOZDANIE/: lab01.md
SPRAWOZDANIA/LAB4_SPRAWOZDANIE/: LAB4.md
SPRAWOZDANIA/LAB5_SPRAWOZDANIE/: LAB5.md
SPRAWOZDANIA/LAB6_SPRAWOZDANIE/: LAB6.md
SPRAWOZDANIA/PROJ3_report/: project3.md
STERO_LAB2_SPRAWOZDANIE/: Lab_2.md
Sprawozdanie_LAB3_STERO/: LAB3.md
better_grip/: CMakeLists.txt  package.xml
better_grip/src/: better_grip.cpp  one_grasp_utils.cpp
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/config/rviz/: stero_rviz_config.rviz
hello_moveit/launch/: custom_world_launch.py  hello_moveit.launch.py  stero_navigation.launch.py  stero_navigation_2.launch.py  stero_pal_gazebo.launch.py  stero_tiago_gazebo.launch.py  stero_tiago_nav_bringup.launch.py
hello_moveit/maps/korytarz/: map.pgm  map.yaml
hello_moveit/maps/mieszkanie2/: map.pgm  map.yaml
hello_moveit/models/korytarz/: model.config  model.sdf
hello_moveit/models/mieszkanie1/: model.config  model.sdf
hello_moveit/models/mieszkanie2/: model.config  model.sdf
hello_moveit/src/: hello_moveit.cpp
hello_moveit/worlds/: korytarz.world  mieszkanie1.world  mieszkanie2.world  pal_office.world  stero.world  stero3_cube.world  stero_nav1.world  stero_tower.world
hello_moveit/worlds/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hello_moveit/worlds/log/: latest_build
hello_stero/: package.xml
hello_stero/src/: hello_stero_node.cpp
nav_tester/: package.xml  setup.cfg  setup.py
nav_tester/nav_tester/: nav_tester.py
one_grasp/: CMakeLists.txt  package.xml
one_grasp/launch/: stero_pal_gazebo.launch.py
one_grasp/src/: one_grasp.cpp  one_grasp_utils.cpp
one_grasp/src/include/: one_grasp_utils.hpp
one_grasp/src/src/: one_grasp_utils.cpp
pick_place/: CMakeLists.txt  package.xml
pick_place/include/pick_place/: one_grasp_utils.hpp
pick_place/src/: one_grasp_utils.cpp  pick_place.cpp
pick_place_robust/: CMakeLists.txt  package.xml
pick_place_robust/src/: one_grasp_utils.cpp  pick_place_robust.cpp
pose_listener/: CMakeLists.txt  package.xml
pose_listener/src/: pose_listener.cpp
position_listener/: CMakeLists.txt  package.xml
position_listener/src/: position_listener.cpp
rectangle_drawer/: package.xml  setup.cfg  setup.py
rectangle_drawer/launch/: rectangle_drawer.launch.py
rectangle_drawer/rectangle_drawer/: rectangle_drawer.py
shape_drawer_2/: package.xml  setup.cfg  setup.py
shape_drawer_2/shape_drawer_2/: shape_drawer_2.py
show_all_grasps/: CMakeLists.txt  package.xml
show_all_grasps/src/: one_grasp_utils.cpp  show_all_grasps.cpp
show_selected_grasps/: CMakeLists.txt  package.xml
show_selected_grasps/src/: one_grasp_utils.cpp  show_selected_grasps.cpp
show_side_grasps/: CMakeLists.txt  package.xml
show_side_grasps/src/: show_side_grasps.cpp
stero_nav_msgs/: CMakeLists.txt  package.xml
stero_nav_msgs/action/: SteroNavWaypointFollow.action
tower_2/: CMakeLists.txt  package.xml
tower_2/include/tower_2/: one_grasp_utils.hpp
tower_2/src/: one_grasp_utils.cpp  tower_2.cpp
tower_3/: CMakeLists.txt  package.xml
tower_3/src/: one_grasp_utils.cpp  tower_3.cpp
waypoint_follower/: package.xml  setup.py
waypoint_follower/waypoint_follower/: waypoint_follower_client.py  waypoint_follower_server.py
waypoint_follower_client/: package.xml  setup.cfg  setup.py
waypoint_follower_client/waypoint_follower_client/: waypoint_follower_client.py
waypoint_follower_server/: package.xml  setup.cfg  setup.py
waypoint_follower_server/waypoint_follower_server/: waypoint_follower_server.py
